# Deepfake-Detection-System

./: .gitignore  LICENSE
backend/: .gitignore  Dockerfile  main.py  main_mock.py  pyproject.toml  requirements.txt  summary_utf8.txt  test_aud.py  test_model.py  trace.txt  trace_aud.txt
backend/auth/: logic.py  routes.py
backend/config/: db.py
backend/ml_models/: detector_aud.py  detector_img.py  detector_vid.py
backend/models/: user.py
backend/routers/: __init__.py  detection.py
backend/services/: __init__.py  audio_detector.py  image_detector.py  manager.py  video_detector.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx  routing.jsx
frontend/src/api/: client.js  detection.js
frontend/src/components/: AboutPage.jsx  BackgroundLayer.jsx  DetectionView.jsx  Hero.jsx  Icon.jsx  LoginView.jsx  Navbar.jsx  SignupView.jsx
