[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.103.1",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.32",
    "soundfile>=0.14.0",
    "uvicorn==0.23.2",
]
